--- a/checkpoint.html
+++ b/checkpoint.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -20,7 +21,6 @@
 
     <div>
         <h4>Selecting Chesspire is a choice that reflects a commitment to uncompromising quality and excellence. With a track record of consistently delivering products crafted to the highest standards, Chesspire stands as a symbol of superior craftsmanship and meticulous attention to detail. Choosing Chesspire means aligning with a brand that prioritizes exceptional materials, thoughtful design, and a dedication to customer satisfaction. This decision resonates with individuals who value premium products that transcend expectations and embody a true embodiment of quality.</h4>
-        <img src="./chess-rook.png" alt="">
     </div>
     <div>
         <h4>The proprietor of Chesspire is a revered figure within the realm of chess, possessing the remarkable ability to swiftly dismantle his opponents within a mere 20 moves. His name is <a href="./363516501_9753792874662485_4277916882137392222_n.jpg">Youssef Rabai</a>, standing as a testament to his mastery of the game.</h4>
